--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Andika+New+Basic&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Aclonica&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap');
 *,
 html,
 body {
@@ -55,7 +56,7 @@ footer {
 
 .footer-distributed h3 {
     color: #ffffff;
-    font: normal 2.1rem "Aclonica", sans-serif;
+    font: normal 2.1rem "New Tegomin", serif;
     margin: 0;
 }
 
@@ -222,7 +223,7 @@ footer {
 
 #mainNavbar .navbar-brand {
     color: rgb(252, 216, 252);
-    font-family: "Play", sans-serif;
+    font-family: 'New Tegomin', serif;
     font-size: 2.5rem;
     margin: 3px 10px 5px 1px;
     padding: 2px 3px 3px 1px;
