--- a/public/css/main.css
+++ b/public/css/main.css
@@ -222,7 +222,7 @@ footer {
 }
 
 #mainNavbar .navbar-brand {
-    color: rgb(252, 216, 252);
+    color: white;
     font-family: 'New Tegomin', serif;
     font-size: 2.5rem;
     margin: 3px 10px 5px 1px;
